# digimorse

./: .gitignore  Cargo.toml  NOTEBOOK.md  README.md  TODO.md  build.rs  cq-cq-keying.csv
docs/: Encoding Keying.omm  Encoding Keying.rtf  Keyer Decoder Statemachine.asta  Makefile  Morse speeds.xlsx  The Digimorse Communications Protocol.rtf  digital-communication-system.eps  digital-communication-system.odg  general-communication-system.eps  general-communication-system.odg  list-audio-devices-signalink.txt  list-audio-devices-txvr.txt  rough notes.txt  sample-qso-histogram.R  sample-qso-m0cuv.csv  sample-qso-m0cuv.eps  sample-qso.txt  the-digimorse-communications-protocol.bib  the-digimorse-communications-protocol.tex
lib/windows/: portaudio.lib
src/: gui_harness.rs  lib.rs  main.rs
src/libs/: mod.rs
src/libs/application/: application.rs  application_spec.rs  mod.rs
src/libs/audio/: audio_devices.rs  audio_devices_spec.rs  checks.rs  mod.rs  tone_generator.rs  tone_generator_channel_alloc_spec.rs  tone_generator_spec.rs
src/libs/buffer_pool/: buffer_pool.rs  buffer_pool_spec.rs  mod.rs  observable_buffer.rs  observable_buffer_spec.rs
src/libs/channel_codec/: channel_encoder.rs  channel_encoder_spec.rs  channel_encoding.rs  crc.rs  crc_spec.rs  ex_2_5.rs  ex_2_5_parity_check_matrix.alist  ex_2_5_parity_check_matrix.txt  ex_2_5_spec.rs  generator_from_parity_rref.txt  generator_matrix.gen  generator_matrix.txt  gray.rs  gray_spec.rs  ldpc.rs  ldpc_init.rs  ldpc_spec.rs  ldpc_util.rs  ldpc_util_spec.rs  mod.rs  parity_check_matrix.alist  parity_check_matrix.pchk  parity_check_matrix.rs  parity_check_matrix.txt  sample_channel_encoding.rs  small_parity_check_matrix.alist  small_parity_check_matrix.pchk
src/libs/config_dir/: config_dir.rs  config_dir_spec.rs  mod.rs
src/libs/config_file/: config_file.rs  config_file_spec.rs
src/libs/conversion/: conversion.rs  conversion_spec.rs  mod.rs  paris.rs
src/libs/delayed_bus/: delayed_bus.rs  delayed_bus_spec.rs  mod.rs
src/libs/gui/: gui.rs  gui_driver.rs  gui_facades.rs  gui_spec.rs  message.rs  mod.rs
src/libs/keyer_io/: arduino_keyer_io.rs  arduino_keyer_io_spec.rs  keyer_io.rs  keyer_io_spec.rs  mod.rs  null_keyer_io.rs  null_keyer_io_spec.rs
src/libs/matchers/: mod.rs  starts_with.rs
src/libs/patterns/: observer.rs  observer_spec.rs
src/libs/playback/: mod.rs  playback.rs  playback_from_keying_spec.rs  playback_spec.rs
src/libs/receiver/: fft.rs  fft_spec.rs  mod.rs  receiver.rs  receiver_spec.rs
src/libs/serial_io/: mod.rs  serial_io.rs  serial_io_spec.rs
src/libs/source_codec/: bitvec_source_encoding_builder.rs  bitvec_source_encoding_builder_spec.rs  bitvec_source_encoding_extractor.rs  bitvec_source_encoding_extractor_spec.rs  keying_encoder.rs  keying_encoder_spec.rs  keying_timing.rs  keying_timing_spec.rs  metadata_codec.rs  mod.rs  source_decoder.rs  source_decoder_spec.rs  source_encoder.rs  source_encoder_spec.rs  source_encoding.rs  source_encoding_spec.rs  test_encoding_builder.rs
src/libs/source_encoder/: bitvec_source_encoding_builder.rs  bitvec_source_encoding_builder_spec.rs  keying_encoder.rs  keying_encoder_spec.rs  mod.rs  source_encoder.rs  source_encoder_spec.rs  (+2 more)
(+20 files in other folders)
