[package]
name = "digimorse"
version = "0.0.1"
authors = ["Matt Gumbley <matt.gumbley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
ctrlc = "3.1"
dirs = "1.0.5"
env_logger = "0.7"
fltk = "1.0.21"
log = "0.4"
portaudio = "0.7.0"
readonly = "0.1"
rustfft = "4.0.0"
serialport = "3.3.0"
serde = "1.0.126"
serde_derive = "1.0.126"
tokio = { version = "1.12.0", features = ["sync"] }
toml = "0.5.8"

[dev-dependencies]
ctor = "0.1"
hamcrest2 = "0.3.0"
mockall = "0.8.3"
tempfile = "3.1.0"
temp_testdir = "0.2"

[[bin]]
name = "digimorse"
path = "src/digimorse/bin/main.rs"

[lib]
name = "digimorse" # this'll be libdigimorse.{d,dylib,rlib}
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]
doc = false
doctest = false

