[package]
name = "digimorse"
version = "0.0.1"
authors = ["Matt Gumbley <matt.gumbley@gmail.com>"]
rust-version = "1.64"
edition = "2018"
# TODO SOON upgrade to 2021 - this causes test breakage in arduino_keyer_io_spec but this must be corrected

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
bitvec = "0.22.3"
bus = "2.2.3"
bytes = "1.1.0"
csv = "1.1.6"
ctrlc = "3.1"
dashmap = "5.0.0"
dirs = "1.0.5"
enum_primitive = "0.1.1"
env_logger = "0.9"
fltk = "1"
fp_rust = "0.3.5"
labrador-ldpc = "1.0.1"
lazy_static = "1.4.0"
libm = "0.2.2"
log = "0.4"
metered = "0.9.0"
num = "0.4.0"
portaudio = "0.7.0"
plotters = "0.3.2"
pretty-hex = "0.2.1"
readonly = "0.1"
regex = "1.6.0"
rustfft = "4.0.0"
serialport = "3.3.0"
serde = "1.0.126"
serde_derive = "1.0.126"
simple-error = "0.3.0"
spin_sleep = "1.0.0"
syncbox = "0.2.4"
toml = "0.5.8"
wav = "1.0.0"

[dev-dependencies]
ctor = "0.1"
hamcrest2 = "0.3.0"
mockall = "0.8.3"
os_info = { version = "3", default-features = false }
rstest = "0.16.0"
rand = "0.8"
serial_test = "0.5.1"
substring = "1.4.5"
tempfile = "3.1.0"
temp_testdir = "0.2"

[[bin]]
name = "digimorse"
path = "src/main.rs"

[[bin]]
name = "gui-harness"
path = "src/gui_harness.rs"

